# Dialectic-MAS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  def.py  langgraph.json  main.py  package-lock.json  package.json  protocol (1) 2.crswap  protocol (1).drawio  pyproject.toml
.agents/: instructions.md
.claude/hooks/: camera_check.sh
.github/workflows/: sync.yml
.husky/: pre-commit
datasets/: config.json
datasets/Digital_Life_Science_Technology/: artificial_intelligence.json  internet.json  pokemon_go.json  social_media.json  tiktok.json
datasets/Education/: book_bans.json  college_education.json  corporal_punishment.json  school_uniforms.json  standardized_tests.json  student_loan_debt.json
datasets/Elections_Presidents/: election_day.json  electoral_college.json  felon_voting.json  ranked_choice_voting.json  voting_age.json  (+1 more)
docs/: attack_prompt_revision_proposal.md  diff.md  evaluation_script_plan.md  free_debate_protocol_plan.md  integration_prompt_revision_proposal.md  main_argument_prompt_revision_proposal.md  one_chain_protocol_revision_plan.md  prompt_audit.md  prompt_phases_overview.md  protocol_revision_plan.md  repeated_main_argument_protocol_revision_proposal.md  success.md  undercut_reinstatement_plan.md  workflow_bug_audit.md
logs/: 🍛.json
result/: dialogue_result.json
scripts/: run_batch.sh  run_category.sh  run_category_no_schema.sh  run_topic.sh  second_round_main.py  test_aimessage_name.py
src/: __init__.py  api.py  cli.py  cli_no_schema.py  def.py  main.py  test_name_identity.py
tests/: conftest.py
(+459 files in other folders)
